# ChromaClipboard

./: .gitignore  README.md  pyproject.toml
chroma_clipboard/: __main__.py  app.py  resources_rc.py
